# snoopy

./: Cargo.toml  Dockerfile  prove-query-result-program
.github/workflows/: docker.yml
abi/: CommitmentHolder.json  ProvingManager.json
src/: contracts.rs  db.rs  lib.rs  main.rs  mpt.rs  proof_storage.rs  routes.rs  state.rs  types.rs  zk.rs
src/loops/: discovery.rs  fetch.rs  mod.rs  run.rs
static/: app.js  styles.css
templates/: index.html
